appId: com.gamelog.app
---
- tapOn: "Options"
- tapOn: "Log Out"
- tapOn:
    text: "Log Out"
    index: -1
