appId: com.gamelog.app
onFlowComplete:
  - runFlow:
      file: common/logout_flow.yaml
  - stopApp
---
- launchApp
- extendedWaitUntil:
    visible: 'Sign In'
    timeout: 100000

- runFlow:
    when:
      visible: 'Sign In'
    file: common/login_flow.yaml
    env:
      EMAIL: test-01@test.com
      PASSWORD: 12345678
- extendedWaitUntil:
    visible: 'Games'
    timeout: 100000
- assertVisible: "Europa Universalis IV header"
- assertVisible:
    point: 6%,28%
- assertVisible:
    point: 4%,28%
- tapOn:
    id: 'game-list-card-expand-236850'
- assertVisible: 'LAST PLAYED'
- assertVisible: 'STREAK'
- assertVisible: 'MAX / DAY'
- assertVisible: 'GENRES'
- assertVisible: 'STATUS'
- assertVisible: 'PLATFORM SPLIT'
